adds accounts + social frameworks, user authenticaion, requests timeline tweets, displays tweets in view tale, reloads table view on main queuq

--- a/TwitterCF/Base.lproj/Main.storyboard
+++ b/TwitterCF/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                                 <rect key="frame" x="0.0" y="40" width="600" height="560"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.001131755526" green="1" blue="0.64910600760000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexBackgroundColor" red="1" green="0.29279729355994488" blue="0.27193404860553327" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexTrackingBackgroundColor" red="1" green="0.44758776466882011" blue="0.2455101027327008" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" textLabel="WW8-sy-3SG" detailTextLabel="uvs-Ru-trP" style="IBUITableViewCellStyleSubtitle" id="xoM-0p-XE6">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
@@ -29,7 +32,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WW8-sy-3SG">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WW8-sy-3SG">
                                                     <rect key="frame" x="15" y="6" width="31.5" height="19.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <animations/>
