--- a/TwitterCF/Base.lproj/Main.storyboard
+++ b/TwitterCF/Base.lproj/Main.storyboard
@@ -3,12 +3,32 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
+        <!--Tweet Detail View Controller-->
+        <scene sceneID="EWZ-eK-Nb5">
+            <objects>
+                <viewController storyboardIdentifier="TweetDetailViewController" id="wCf-EF-wXY" customClass="TweetDetailViewController" customModule="TwitterCF" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5ay-hv-KRj"/>
+                        <viewControllerLayoutGuide type="bottom" id="Shm-dc-B3t"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kLC-Ij-kpv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fCu-53-Sd1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1447" y="478"/>
+        </scene>
+        <!--Tweets-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="TwitterCF" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" title="Tweets" id="BYZ-38-t0r" customClass="HomeViewController" customModule="TwitterCF" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,8 +37,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="igL-x9-73U">
-                                <rect key="frame" x="0.0" y="40" width="600" height="560"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="igL-x9-73U">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.001131755526" green="1" blue="0.64910600760000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -52,6 +72,9 @@
                                             <animations/>
                                         </tableViewCellContentView>
                                         <animations/>
+                                        <connections>
+                                            <segue destination="wCf-EF-wXY" kind="show" identifier="detailVCsegue" id="K6D-qG-KqA"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -62,22 +85,22 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="igL-x9-73U" secondAttribute="bottom" id="Nyq-eg-fj2"/>
                             <constraint firstItem="igL-x9-73U" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cv9-cZ-QYg"/>
                             <constraint firstAttribute="trailing" secondItem="igL-x9-73U" secondAttribute="trailing" id="kuc-zI-oDt"/>
-                            <constraint firstItem="igL-x9-73U" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="pKD-wU-IPQ"/>
+                            <constraint firstItem="igL-x9-73U" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="sCw-rz-Oyq"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="CT8-YH-G3E"/>
+                    <navigationItem key="navigationItem" title="Tweets" id="CT8-YH-G3E"/>
                     <connections>
                         <outlet property="tableView" destination="igL-x9-73U" id="eXM-Ue-VBV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="777" y="496"/>
+            <point key="canvasLocation" x="771" y="478"/>
         </scene>
-        <!--Tweets-->
+        <!--Navigation Controller-->
         <scene sceneID="yfI-Ba-Wed">
             <objects>
-                <navigationController title="Tweets" automaticallyAdjustsScrollViewInsets="NO" id="E18-0L-m6M" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E18-0L-m6M" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1jb-pX-p0Y">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
