--- a/TwitterCF/Base.lproj/Main.storyboard
+++ b/TwitterCF/Base.lproj/Main.storyboard
@@ -17,9 +17,26 @@
                     <view key="view" contentMode="scaleToFill" id="kLC-Ij-kpv">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raz-hH-Aoy">
+                                <rect key="frame" x="269" y="222" width="42" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="raz-hH-Aoy" secondAttribute="trailing" constant="8" id="7cL-MQ-ZTO"/>
+                            <constraint firstItem="raz-hH-Aoy" firstAttribute="top" secondItem="5ay-hv-KRj" secondAttribute="bottom" constant="8" id="RRd-R0-Ynu"/>
+                            <constraint firstItem="raz-hH-Aoy" firstAttribute="leading" secondItem="kLC-Ij-kpv" secondAttribute="leadingMargin" constant="8" id="oA4-ZS-o3K"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tweetLabel" destination="raz-hH-Aoy" id="WBe-o7-6os"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fCu-53-Sd1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
